--- a/Bilverkstad1/PresentationLager/KundVy.xaml
+++ b/Bilverkstad1/PresentationLager/KundVy.xaml
@@ -114,13 +114,13 @@
                         <DockPanel>
                             <StackPanel DockPanel.Dock="Top">
                                 <Button Style="{StaticResource ButtonMenu}" Margin="10,70,10,0" Name="BtnNykund"
-                                     Content="Ny Kund" Background="#FF6067F1" FontSize="12" IsEnabled="False" Command="{Binding NyKundCommand}">
+                                     Content="Ny Kund" Background="#FF6067F1" FontSize="12" IsEnabled="True" Command="{Binding NyKundCommand}">
                                     <Button.Effect>
                                         <DropShadowEffect BlurRadius="15" Opacity="0.5" Direction="270" ShadowDepth="3" Color="#FF272727"/>
                                     </Button.Effect>
                                 </Button>
                                 <Button Style="{StaticResource ButtonMenu}"  Margin="10,20,10,0" Name="BtnUppdatera" 
-                                    Content="Uppdatera" Background="#FF6067F1" FontSize="12" IsEnabled="False" Command="{Binding UppdateraCommand}">
+                                    Content="Uppdatera" Background="#FF6067F1" FontSize="12" IsEnabled="True" Command="{Binding UppdateraCommand}">
                                     <Button.Effect>
                                         <DropShadowEffect BlurRadius="15" Opacity="0.5" Direction="270" ShadowDepth="3" Color="#FF272727"/>
                                     </Button.Effect>
