--- a/Bilverkstad1/PresentationLager/ReservDelVy.xaml
+++ b/Bilverkstad1/PresentationLager/ReservDelVy.xaml
@@ -165,6 +165,7 @@
 
 
                         <TextBox  Style="{StaticResource TextBoxSearch}"
+                                  Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}"
                              x:Name="txtSearch" Height="20" 
                              Margin="470,10,10,0" VerticalAlignment="Top"   />
                         <Label Content="Namn" 
