--- a/Bilverkstad1/PresentationLager/BokningVy.xaml
+++ b/Bilverkstad1/PresentationLager/BokningVy.xaml
@@ -174,22 +174,9 @@
                         VerticalAlignment="Top" 
                         Width="112" 
                         Foreground="#FFEAC4EE" FontWeight="Bold" FontStyle="Italic"/>
-                        <TextBox Style="{StaticResource TextBoxInput}" 
-                          Text="{Binding InlämningsDatum, Mode=TwoWay}" 
-                          x:Name="InlämningsDatum"
-                          HorizontalAlignment="Left" 
-                          Margin="439,97,0,0" 
-                          VerticalAlignment="Top"  
-                         />
                         <Label Content="AnställningsNr"
                         Foreground="#FFEAC4EE" FontWeight="Bold" FontStyle="Italic"
                         HorizontalAlignment="Left" Height="27" Margin="10,0,0,0" VerticalAlignment="Center" Width="105"/>
-                        <TextBox Style="{StaticResource TextBoxInput}" 
-                          Text="{Binding UtlämningsDatum, Mode=TwoWay}" 
-                          x:Name="UtlämningsDatum"
-                          HorizontalAlignment="Left" 
-                          Margin="439,61,0,0" 
-                          VerticalAlignment="Top" />
                         <Label Content="UtlämningsDatum" 
                         HorizontalAlignment="Left" 
                         Height="34" 
@@ -227,7 +214,7 @@
                             x:Name="Åtgärder"
                             HorizontalAlignment="Left" 
                             Margin="439,133,0,0" 
-                            VerticalAlignment="Top"  
+                            VerticalAlignment="Top" Width="135"  
                          />
                         <Label Content="Åtgärder" 
                             HorizontalAlignment="Left" 
@@ -235,6 +222,14 @@
                             VerticalAlignment="Top" 
                             Width="112" 
                             Foreground="#FFEAC4EE" FontWeight="Bold" FontStyle="Italic"/>
+                        <DatePicker HorizontalAlignment="Left" 
+                                    SelectedDate="{Binding UtlämningsDatum, Mode=TwoWay}" 
+                                    x:Name="UtlämningsDatum"
+                                    Height="23" Margin="439,58,0,0" VerticalAlignment="Top" Width="135"/>
+                        <DatePicker HorizontalAlignment="Left" 
+                            SelectedDate="{Binding InlämningsDatum, Mode=TwoWay}" 
+                            x:Name="InlämningsDatum"
+                            Height="23" Margin="439,97,0,0" VerticalAlignment="Top" Width="135"/>
 
 
 
